--- a/1/index.html
+++ b/1/index.html
@@ -10,11 +10,18 @@
     <title>Images of the Russian Empire</title>
     <style>
     </style>
+    <style>
+        .card {
+            margin-top: 3rem !important;
+            margin-bottom: 3rem !important;
+        }
+    </style>
 </head>
+
 
 <body class="p-5">
     <div class="">
-        <h1 class="">
+        <h1 class="mt-3">
             CS180 Project 1: Colorizing the Prokudin-Gorskii photo collection
         </h1>
         <hr>
@@ -22,29 +29,54 @@
             Introduction
         </h2>
         <span>
-            Sergey Prokudin-Gorsky was russian photographer, who was known to for his effort to document 20th century
-            Russia.
+            Sergey Prokudin-Gorsky was russian photographer, who was known for his effort to document 20th century
+            Russia.<br>
             He traveled Russia and took photos of a wide range of stuff and had the idea to record every scene onto a
-            glass plate
-            with a red, blue and green filter each. This way he could use a projector with different lighting, and the 3
-            glassplates
-            in different colors, to project a color image.
+            glass plate with a red, blue and green filter each. <br> <br>
+            This way he could use a projector with three different color of lights, and project the three different
+            colored image plates
+            on top of each other, to end up with a color image.<br>
+            These RGB glass plates survived and are currently in the possetion of the Library of Congress. They have
+            digitized the negatives, which is also what we want to do in this project.
         </span>
-        <h2>
+
+        <h2 class="mt-5">
             Single-scale implementation with successful results on low-res images
         </h2>
         <span>
             Process:
 
-            - Load image and slice into 3 seperate equal height images, one for blue green and red respectively (blue as
-            base)
-            - Use NCC, on the intensities which was better than euclidean loss, to evaluate whether the images match
-            - use np.roll to try out different displacements
-            - before we calculate the NCC, we apply the NCC only on a cropped middle section, since corners are
-            problematic
-            - play around with cropping parameters and displacement pixel ranges
-            - select the displacement with the best NCC
-            - Result:
+            We start off with one low resolution jpg images, which are scans of the three different colored glass plates
+            stacked on top of each other <br> <br>
+            Our first step is just to slice them into 3 seperate equal height images, because our goal is to stack them
+            on top of each other. <br> <br>
+            The first image slice represents the blue glass plate, the second the green and the third the red glass
+            plate <br> <br>
+
+            Just slicing them and stacking them on top does not yield us with a satisfying result, since they are
+            missalligned: <br> <br>
+            <div class="text-center">
+                <img src="data/lowres/missalligned.png" class="rounded" alt="...">
+            </div>
+
+
+            We need to allign the images correctly, but how do we decide whether 2 images are similar to each other?
+            <br> <br>
+            The most simple method for the beginning is the following: <br> <br>
+            We can compare the intensity values of all the pixels using the NCC, to evaluate whether the images match.
+            To search for a match we could just brute force the search, by np.roll(ing) the image inside a certain range
+            and compare the NCC values.
+            It is also possible to use the euclidiean loss, to evaluate whether the images match, but I found out that
+            for our case, NCC yielded better results. <br> <br>
+            One thing we do, before we apply the NCC, is cropping out the corners, since they are a just the border of
+            the glass plates and don't yield us usefull information.
+            I have decided to crop out 15% of the image, from the edges.
+            After trying all the possible shifts in our search range, we select the one with the best match, so highest
+            NCC value. <br> <br>
+            As search range I have set 10% of our width and height. So we are basically shifting our width and height by
+            -5% to 5%, in search of the best intensity match.
+            <br> <br>
+            This is our result for the low resolution images:
         </span>
         <hr>
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -82,9 +114,41 @@
             </div>
         </div>
         <hr>
-        <h2>
+        <h2 class="mt-5">
             Multiscale pyramid version that works on large images
         </h2>
+        <span>
+            Now our goal is to align the large images. Trying our previous method on very large images that have a size
+            of 3700x9700 takes too long.
+            I tried to run it just for fun, even after 20 minutes, there was no result.
+            <br><br>
+            But what we could do here, is using image pyramids. We basically downscale our image N times and use the
+            same exact method from before to search for a match.
+            Then we do multiply the optimal shift we found by 2 and use the N-1 downscaled version of our image to
+            finetune our shift.
+            <br><br>
+            We do that N times to find the optimal shift.
+            To get the optimal result, I have tried different parameters for search ranges (how much should we shift the
+            x and y axis in search of the optimal match),
+            different crops eg. (what percentage of the image can I crop away, saving compute but still getting good
+            results), and different downscales.
+            <br><br>
+            I have received a good result with the following setting:
+            <br><br>
+            I scaled the image down 3 times (N=3), used a search range of 0.1 * 0.5 ** (N-Current_Layer) and cropped
+            1-0.6 * 0.5 ** (N-Current_Layer) of the image away.
+            <br><br>
+
+            Calculating the NCC value for so many pixels takes a long time on a single thread, which is why I used
+            pythons ThreadPoolExecutor() to use all the CPU cores of my laptop.
+            This is the result I ended up with:
+            <br><br>
+
+            (All the images were pretty good except for the emir image, of the guy sitting in a chair)
+            (I have also provided the displacement of the green and red plates in regard to the blue plate under each
+            image)
+            <br><br>
+        </span>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
@@ -93,7 +157,7 @@
                         <h5 class="card-title">Church</h5>
                         <p class="card-text">Green displacement (x,y): (24 3) <br>
                             Red displacement (x,y): (58 -4)
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,7 +168,7 @@
                         <h5 class="card-title">Emir</h5>
                         <p class="card-text">Green displacement (x,y): (48 23) <br>
                             Red displacement (x,y): (-100 -48)
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -115,7 +179,7 @@
                         <h5 class="card-title">Harvesters</h5>
                         <p class="card-text">Green displacement (x,y): (59 19) <br>
                             Red displacement (x,y): (123 16)
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -128,7 +192,7 @@
                         <h5 class="card-title">Icon</h5>
                         <p class="card-text">Green displacement (x,y): (41 18) <br>
                             Red displacement (x,y): (89 23)
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -139,16 +203,18 @@
                         <h5 class="card-title">Lady</h5>
                         <p class="card-text">Green displacement (x,y): (54 6) br
                             Red displacement (x,y): (113 10)
-                            </p>
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/melons_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Monastery</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Melons</h5>
+                        <p class="card-text">Green displacement (x,y): (83 9) <br>
+                            Red displacement (x,y): (179 12)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -156,28 +222,34 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/onion_church_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Cathedral</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Onion Church</h5>
+                        <p class="card-text">Green displacement (x,y): (50 26) <br>
+                            Red displacement (x,y): (107 37)
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/sculpture_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tobolsk</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Sculpture</h5>
+                        <p class="card-text">Green displacement (x,y): (33 -11) <br>
+                            Red displacement (x,y): (140 -27)
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/self_portrait_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Monastery</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Self Portrait</h5>
+                        <p class="card-text">Green displacement (x,y): (77 29) <br>
+                            Red displacement (x,y): (175 37)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -185,62 +257,28 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/three_generations_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Cathedral</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Three Generations</h5>
+                        <p class="card-text">Green displacement (x,y): (49 15) <br>
+                            Red displacement (x,y): (109 11)
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
+                    <img src="data/highres/train_cropped.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tobolsk</h5>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Monastery</h5>
-                        <p class="card-text"></p>
+                        <h5 class="card-title">Train</h5>
+                        <p class="card-text">Green displacement (x,y): (42 6) <br>
+                            Red displacement (x,y): (85 32)
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-                <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cathedral</h5>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Tobolsk</h5>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <img src="data/highres/" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Monastery</h5>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
