--- a/1/index.html
+++ b/1/index.html
@@ -24,6 +24,9 @@
         <h1 class="mt-3">
             CS180 Project 1: Colorizing the Prokudin-Gorskii photo collection
         </h1>
+        <small>
+            by Boyong Wu
+        </small>
         <hr>
         <h2>
             Introduction
