--- a/1/index.html
+++ b/1/index.html
@@ -147,7 +147,7 @@
             This is the result I ended up with:
             <br><br>
 
-            (All the images were pretty good except for the emir image, of the guy sitting in a chair)
+            (All the images were pretty good except for the emir image, of the guy sitting in a chair)<br>
             (I have also provided the displacement of the green and red plates in regard to the blue plate under each
             image)
             <br><br>
