--- a/1/index.html
+++ b/1/index.html
@@ -227,6 +227,7 @@
                 We start off with one low resolution jpg images, which are scans of the three different colored glass
                 plates stacked on top of each other.
             </p>
+            <img src="data/cathedral.jpg" class="d-block mx-lg-auto img-fluid my-2 px-md-5">
             <p>
                 Our first step is to slice them into 3 separate equal height images, so that we can project them on top of each other later.
             </p>
