--- a/1/index.html
+++ b/1/index.html
@@ -8,156 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <title>Images of the Russian Empire</title>
-    <style>
-        a:not(.btn) {
-            text-decoration: none;
-        }
-
-        a:not(.btn):hover {
-            text-decoration: underline;
-        }
-
-
-        .hero-p-text {
-            font-size: large;
-        }
-
-
-        .navbar {
-            border-bottom: 1px solid rgb(222, 222, 222);
-            background-color: rgba(255, 255, 255, 0.99);
-            min-height: 3rem;
-            box-shadow: 0 2px 10px rgb(0 0 0 / 4%);
-            position: -webkit-sticky;
-            position: sticky;
-            top: 0;
-        }
-
-        .btn-primary {
-            background-color: rgb(17, 104, 223);
-            border-color: rgb(17, 104, 223);
-            /* border: none; */
-        }
-
-
-        .sidebar-toggle .sidebar-collapse-icon {
-            display: none
-        }
-
-        .sidebar-toggle:not(.collapsed) .sidebar-expand-icon {
-            display: none
-        }
-
-        .sidebar-toggle:not(.collapsed) .sidebar-collapse-icon {
-            display: inline-block
-        }
-
-
-        @media (min-width: 992px) {
-            .navbar-nav {
-                font-size: small;
-                /* font-weight: bold; */
-            }
-
-            .legal-text-block {
-                width: 800px;
-            }
-
-            .large-hero-title {
-                font-size: 3rem;
-                font-weight: 700;
-            }
-
-            .lead {
-                font-size: larger !important;
-            }
-
-            .navbar-dropdown-menu {
-                font-size: small;
-            }
-
-        }
-
-
-        @media (max-width: 991.98px) {
-            .admin-links>ul {
-                padding: 1rem 1rem;
-                border-bottom: 1px solid rgb(222, 222, 222);
-                font-size: large;
-                background-color: rgb(238, 238, 240);
-            }
-
-            .admin-links>ul>li:not(:first-child) {
-                border-top: 1px solid rgb(222, 222, 222);
-            }
-
-            .navbar-nav {
-                font-weight: bold;
-                margin-top: 1rem;
-            }
-
-            .navbar-nav>li {
-                padding: .5rem 0rem;
-            }
-
-            .nav-button-section {
-                margin: 1rem 0rem;
-            }
-
-            .nav-button-section>.btn-sm {
-                padding: .5rem 0rem;
-                margin: .25rem 0rem;
-                font-size: large;
-            }
-
-            .large-hero-title {
-                font-size: xx-large;
-                font-weight: 700;
-            }
-
-            .lead {
-                font-size: large !important;
-            }
-
-            .navbar-dropdown-menu>li>a {
-                padding: 1rem;
-            }
-
-
-        }
-
-        .legal-text-block {
-            margin: 5rem auto 8rem;
-        }
-
-        .bg-grey {
-            background-color: rgb(251, 251, 254);
-        }
-
-        .navbar-dropdown-menu {
-            border: 1px solid rgb(245, 245, 245);
-            box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
-        }
-    </style>
-    <style>
-        h4 {
-            margin-top: 3rem;
-            margin-bottom: 2rem;
-        }
-
-        h3 {
-            margin-top: 3rem;
-            margin-bottom: 3rem;
-        }
-
-
-        a.anchor {
-            display: block;
-            position: relative;
-            top: -4rem;
-            visibility: hidden;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles.css">
     <title>CS 180: Images of the Russian Empire</title>
 </head>
 
@@ -170,19 +21,22 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item ms-lg-3 dropdown">
-                            <a class="nav-link link-dark" href="#">Project 1</a>
+                            <a class="nav-link link-dark" href="/bo/1/">Project 1</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="#">Project 2</a>
+                            <a class="nav-link link-dark" href="/bo/2/">Project 2</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="#">Project 3</a>
+                            <a class="nav-link link-dark" href="/bo/3/">Project 3</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="#">Project 4</a>
+                            <a class="nav-link link-dark" href="/bo/4/">Project 4</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="#">Project 5</a>
+                            <a class="nav-link link-dark" href="/bo/5/">Project 5</a>
+                        </li>
+                        <li class="nav-item ms-lg-3">
+                            <a class="nav-link link-dark" href="/bo/6/">Final Project</a>
                         </li>
                     </ul>
                 </div>
