--- a/1/index.html
+++ b/1/index.html
@@ -21,22 +21,22 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item ms-lg-3 dropdown">
-                            <a class="nav-link link-dark" href="/bo/1/">Project 1</a>
+                            <a class="nav-link link-dark" href="/boyongwu/1/">Project 1</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="/bo/2/">Project 2</a>
+                            <a class="nav-link link-dark" href="/boyongwu/2/">Project 2</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="/bo/3/">Project 3</a>
+                            <a class="nav-link link-dark" href="/boyongwu/3/">Project 3</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="/bo/4/">Project 4</a>
+                            <a class="nav-link link-dark" href="/boyongwu/4/">Project 4</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="/bo/5/">Project 5</a>
+                            <a class="nav-link link-dark" href="/boyongwu/5/">Project 5</a>
                         </li>
                         <li class="nav-item ms-lg-3">
-                            <a class="nav-link link-dark" href="/bo/6/">Final Project</a>
+                            <a class="nav-link link-dark" href="/boyongwu/6/">Final Project</a>
                         </li>
                     </ul>
                 </div>
